# SFML-Kinematics

./: CMakeLists.txt  README.md
include/: robot2d.hpp
src/: main.cpp  robot2d.cpp
